# SimpleGUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MenuManager.cpp  MenuManager.h  README.md  TODO  Utils.cpp  Utils.h  VendingMachine.cpp  VendingMachine.h  main.cpp
VendingMachine/: LocalePopulator.h  PageProvider.cpp  PageProvider.h  UserOrderHandler.cpp  UserOrderHandler.h  VendingMachine.cpp  VendingMachine.h  main.cpp
VendingMachine/StockSystem/: DrinkType.cpp  DrinkType.h  SnackType.cpp  SnackType.h  StockHandler.cpp  StockHandler.h  StockType.h
VendingMachine/locale/: us.json
VendingMachine/pages/: DefaultPage.h  DrinksPage.h  SnacksPage.h  UserOrderPage.h
src/: CMakeLists.txt  FileHandler.h  MenuManager.cpp  MenuManager.h  Page.cpp  Page.h  Selectable.cpp  Selectable.h  StylePopulator.h  Utils.cpp  main.cpp
src/VendingMachine/: VendingMachine.cpp  VendingMachine.h
src/config/: style.json  us.json
src/eventhandler/: Event.h  EventIngestor.h  EventListener.h  KeyboardEvent.h  KeyboardEventListener.cpp  KeyboardEventListener.h
src/io_handler/: IOInterface.h  UnixIO.cpp  UnixIO.h  WindowsIO.cpp  WindowsIO.h
src/output_handler/: OutputInterface.h  WindowsOutput.cpp  WindowsOutput.h
src/utils/: Config.cpp  Config.h  Constant.h  FileHandler.cpp  FileHandler.h  GeneralUtils.cpp  GeneralUtils.h  LingualConfig.cpp  LingualConfig.h  LocalizeConfig.cpp  LocalizeConfig.h
